# Halcon_UI

./: .gitattributes  CMakeLists.txt  README.md
3rd/XCGUI/: XCGUI.lib  xcgui.h
def/: Halcon_UI.def
doc/html/reference/: HHalconUI.html  Hik_openCamera.html  index_by_name.html  legal_notes.html  toc_userextensions.html
examples/: Halcon_UI.hdev  YouEyE.bat  界面设计器.hdev
examples/XML-template/: ComboBox_ListBox_Item.xml  Tree_Item.xml
help/: operators_en_US.key  operators_en_US.ref
include/: Halcon_Def.h  Halcon_UI.h  StringQueue.h
source/: Halcon_UI.c  Halcon_UI.cpp  StringQueue.cpp
